fix(Tests): fix Alias and Index Mongo collections names